--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "~4.16.1",
+    "express-async-handler": "^1.2.0",
     "express-session": "^1.18.0",
+    "express-validator": "^7.1.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "luxon": "^3.4.4",
